# Linux

./: README.md
Guia_Linux/Makefiles/: readme.md
Guia_Linux/Makefiles/Desafios/Desafio_1/: Makefile
Guia_Linux/Makefiles/Desafios/Desafio_2/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  programa
Guia_Linux/Makefiles/Desafios/Desafio_2/include/: calcula.h  calcula.h.in  stamp-h1
Guia_Linux/Makefiles/Exercicio_1/: Makefile  calcula.c
Guia_Linux/Makefiles/Exercicio_2/: Makefile  Makefile.am  Makefile.in  calcula.h  config.status  configure  configure.ac  main  main.c  utilizando_autotools
Guia_Linux/Shell_Script/: readme.md  sh_atividade_1.sh
Guia_Linux/Shell_Script/Exercício/: arquivo.txt  for.sh  meu_script_1.sh  script_exemplo.sh  script_testes_1.sh  sh_atividade_2.sh  while.sh
Red_Hat_Enterprise_Linux/Guia_Linux/Shell_Script/: condicional.sh  participantes.txt  sh_exercicio_1.sh
